# financial_portfolio

./: README.md
market_sentiment/: .env.example  CLAUDE.md  README.md  pyproject.toml
market_sentiment/log/: log_2026_05_28.txt
market_sentiment/src/market_sentiment/acquisition/: alpha_vantage.py  main.py  newsapi.py
market_sentiment/src/market_sentiment/etl/: _helpers.py  main.py
market_sentiment/src/market_sentiment/etl/schemas/: alpha_vantage.py  newsapi.py  normalized.py
market_sentiment/src/market_sentiment/warehouse/: _helpers.py  fetch.py  r2_reader.py  r2_uploader.py  result.py
